--- a/src/index.html
+++ b/src/index.html
@@ -209,7 +209,7 @@ layout: default.njk
     <dd>145</dd>
 </dl>
 <h3 class="heading upper mb2">Preparing Instructions for the Reproduction Process 154</h3>
-<h3 class="heading upper mb2">Table of Symbols for Prrof Correction 159</h3>
+<h3 class="heading upper mb2">Table of Symbols for Proof Correction 159</h3>
 <h3 class="heading upper mb2">Forms Design Check List 166</h3>
 <h3 class="heading upper mb2">Reference Material 170</h3>
 <h3 class="heading upper mb2">Index 171</h3>
