Sort headings and anchors

--- a/src/index.html
+++ b/src/index.html
@@ -103,13 +103,13 @@ layout: default.njk
     reduced size.
 </p>
 
-<h2>
+<h2 id="contents">
     Contents
 </h2>
 
 <hr />
 
-<h3 class="heading upper mb2">Introduction</h3>
+<h3 id="introduction" class="heading upper mb2">Introduction</h3>
 <dl>
     <dt>
     <a href="/the-value-of-well-designed-forms">
@@ -118,12 +118,16 @@ layout: default.njk
     </dt>
     <dd>page 9</dd>
 </dl>
-<h3 class="heading upper mb2">Deciding Requirements</h3>
+<h3 id="deciding-requirements" class="heading upper mb2">Deciding Requirements</h3>
 <dl>
-    <dt>Collecting, assembling and analysing relevant information</dt>
+    <dt>
+        <a href="collecting-assembling-and-analysing-relevant-information">
+            Collecting, assembling and analysing relevant information
+        </a>
+    </dt>
     <dd>11</dd>
 </dl>
-<h3 class="heading upper mb2">Evolving a Design</h3>
+<h3 id="evolving-a-design" class="heading upper mb2">Evolving a Design</h3>
 <dl>
     <dt>Preliminary considerations</dt>
     <dd>16</dd>
@@ -173,7 +177,7 @@ layout: default.njk
     <dd>99</dd>
 </dl>
 
-<h3 class="heading upper mb2">Transit and Mailing Documents</h3>
+<h3 id="transit-and-mailing-documents" class="heading upper mb2">Transit and Mailing Documents</h3>
 <dl>
     <dt>Internal transit documents page</dt>
     <dd>103</dd>
@@ -182,9 +186,7 @@ layout: default.njk
     <dt>Folders suitable for postal purposes</dt>
     <dd>108</dd>
 </dl>
-<h3 class="heading upper mb2">
-    The Form in Print
-</h3>
+<h3 id="the-form-in-print" class="heading upper mb2">The Form in Print</h3>
 <dl>
     <dt>The layout of the printed matter</dt>
     <dd>112</dd>
@@ -197,9 +199,7 @@ layout: default.njk
     <dt>Rules</dt>
     <dd>120</dd>
 </dl>
-<h3 class="heading upper mb2">
-    Copying
-</h3>
+<h3 id="copying" class="heading upper mb2">Copying</h3>
 <dl>
     <dt>Use of carbon papers or carbon coatings</dt>
     <dd>133</dd>
@@ -208,8 +208,8 @@ layout: default.njk
     <dt>Making copies by photocopying methods</dt>
     <dd>145</dd>
 </dl>
-<h3 class="heading upper mb2">Preparing Instructions for the Reproduction Process 154</h3>
-<h3 class="heading upper mb2">Table of Symbols for Proof Correction 159</h3>
-<h3 class="heading upper mb2">Forms Design Check List 166</h3>
-<h3 class="heading upper mb2">Reference Material 170</h3>
-<h3 class="heading upper mb2">Index 171</h3>
+<h3 id="preparing-instructions-for-the-reproduction-process" class="heading upper mb2">Preparing Instructions for the Reproduction Process 154</h3>
+<h3 id="table-of-symbols-for-proof-correction" class="heading upper mb2">Table of Symbols for Proof Correction 159</h3>
+<h3 id="forms-design-check-list" class="heading upper mb2">Forms Design Check List 166</h3>
+<h3 id="reference-material" class="heading upper mb2">Reference Material 170</h3>
+<h3 id="index" class="heading upper mb2">Index 171</h3>
