Add use of colour page

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@ layout: default.njk
 <dl>
     <dt>
     <a href="/the-value-of-well-designed-forms">
-        The value of well-designed forms [Not checked]
+        The value of well-designed forms
     </a>
     </dt>
     <dd>page 9</dd>
@@ -122,7 +122,7 @@ layout: default.njk
 <dl>
     <dt>
         <a href="collecting-assembling-and-analysing-relevant-information">
-            Collecting, assembling and analysing relevant information [Not checked]
+            Collecting, assembling and analysing relevant information
         </a>
     </dt>
     <dd>11</dd>
@@ -163,9 +163,7 @@ layout: default.njk
     <dd>68</dd>
     <dt>Design as an aid to filing and indexing</dt>
     <dd>83</dd>
-    <dt>
-    Design factors influenced by the method of producing a stock of forms
-    </dt>
+    <dt>Design factors influenced by the method of producing a stock of forms</dt>
     <dd>87</dd>
     <dt>Make-up of documents and forms</dt>
     <dd>88</dd>
@@ -173,7 +171,11 @@ layout: default.njk
     <dd>94</dd>
     <dt>Choice of material</dt>
     <dd>98</dd>
-    <dt>Use of colour</dt>
+    <dt>
+        <a href="use-of-colour">
+            Use of colour
+        </a>
+    </dt>
     <dd>99</dd>
 </dl>
 
