Add highlight modern day thing

--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,13 @@ layout: default.njk
     Price £1 1s. od. net
 </p>
 
-<p class="italic mb16">
+<p class="italic mb2">
     Printed in England under the authority of Her Majesty’s Stationery Office
     by The Curwen Press, Plaistow, London E.13
+</p>
+
+<p class="highlight-modern mb16">
+    Web version created by <a href="https://twitter.com/nickcolley">Nick Colley</a>
 </p>
 
 <h2>
