--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@ layout: default.njk
 </p>
 
 <p class="highlight-modern mb16">
-    Web version created by <a href="https://twitter.com/nickcolley">Nick Colley</a>
+    Web version created by <a href="https://twitter.com/nickcolley">Nick Colley</a>, you can <a href="/about">read more about the behind the scenes</a>.
 </p>
 
 <h2>
