Add preliminary considerations page

--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,11 @@ layout: default.njk
 </dl>
 <h3 id="evolving-a-design" class="upper mb1">Evolving a Design</h3>
 <dl>
-    <dt>Preliminary considerations</dt>
+    <dt>
+        <a href="/evolving-a-design/preliminary-considerations">
+            Preliminary considerations
+        </a>
+    </dt>
     <dd>16</dd>
     <dt>Form headings and identifications</dt>
     <dd>17</dd>
