Get rid of 'not checked'

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@ layout: default.njk
     The Design<br />
     of Forms
     <small class="heading block upper spacing">
-        in Government departments [Not checked]
+        in Government departments
     </small>
 </h1>
 
