Add the wording of the form page

--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,11 @@ layout: default.njk
         </a>
     </dt>
     <dd>17</dd>
-    <dt>The wording of the form</dt>
+    <dt>
+        <a href="/evolving-a-design/the-wording-of-the-form">
+            The wording of the form
+        </a>
+    </dt>
     <dd>21</dd>
     <dt>The layout and style of the form</dt>
     <dd>22</dd>
