Add text for layout and style of the form page

--- a/src/index.html
+++ b/src/index.html
@@ -147,7 +147,11 @@ layout: default.njk
         </a>
     </dt>
     <dd>21</dd>
-    <dt>The layout and style of the form</dt>
+    <dt>
+        <a href="/evolving-a-design/the-layout-and-style-of-the-form">
+            The layout and style of the form
+        </a>
+    </dt>
     <dd>22</dd>
     <dt>Notes and instructions</dt>
     <dd>32</dd>
